force-app/main/default/objects/vlocity_ps__PublicProgram__c/vlocity_ps__PublicProgram__c.object-meta.xml
<CustomObject>
    <description>Represents the government funded assistance programs like medicaid, housing, supplemental nutirition, supplemental security income etc.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>