force-app/main/default/objects/vlocity_ps__PublicProgram__c/fields/vlocity_ps__AlternateName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AlternateName__c</fullName>
    <label>Alternate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>