force-app/main/default/objects/vlocity_ps__PublicProgram__c/fields/vlocity_ps__EnactedDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EnactedDate__c</fullName>
    <label>Enacted Date</label>
    <type>Date</type>
</CustomField>