force-app/main/default/objects/vlocity_ps__PublicProgram__c/fields/vlocity_ps__FundAmount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__FundAmount__c</fullName>
    <description>Fund amount</description>
    <label>Total Funding</label>
    <summarizedField>vlocity_ps__ProgramFundingSource__c.vlocity_ps__Amount__c</summarizedField>
    <summaryForeignKey>vlocity_ps__ProgramFundingSource__c.vlocity_ps__ProgramId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>