force-app/main/default/objects/vlocity_ps__PublicProgram__c/fields/vlocity_ps__ProgramProduct__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ProgramProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This relationship allows for products to be defined per Program as is customary in Government programs.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>ProgramProduct</relationshipName>
    <type>Lookup</type>
</CustomField>