force-app/main/default/objects/vlocity_ps__PublicProgram__c/fields/vlocity_ps__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>